--- a/www/css/style.css
+++ b/www/css/style.css
@@ -422,6 +422,10 @@ ion-content {
 	font-family: 'Sigmar One', cursive;
 }
 
+.gameArea h4, .gameArea p {
+	font-family: 'Sigmar One', cursive;
+}
+
 #powerContainer {
 	position: absolute;
 	bottom: 10px;
@@ -457,20 +461,125 @@ ion-content {
 	right: 0px;
 }
 
+#userName {
+	color: #fff;
+	text-shadow: 0px 0px 10px #FF6880;
+	font-size: 2rem;
+	top: -10px;
+	width: 250px;
+	right: 140px;
+	position: absolute;
+	-webkit-transform: rotate(-20deg);
+	z-index: 100000;
+}
+
+#menuBox {
+	background: url('../img/game/menuBox.png') no-repeat center center;
+	background-size: cover;
+	position: absolute;
+	width: 200px;
+	height: 380px;
+	top: 16%;
+	right: -100%;
+
+	-webkit-transition: all 350ms ease-out;
+    -moz-transition: all 350ms ease-out;
+    -o-transition: all 350ms ease-out;
+    transition: all 350ms ease-out;
+}
+
+#resultBox {
+	background: url('../img/game/menuBox.png') no-repeat center center;
+	background-size: cover;
+	position: absolute;
+	width: 200px;
+	height: 380px;
+	top: 16%;
+	right: -100%;
+
+	-webkit-transition: all 350ms ease-out;
+    -moz-transition: all 350ms ease-out;
+    -o-transition: all 350ms ease-out;
+    transition: all 350ms ease-out;
+}
+
+#menuBox.shown, #resultBox.shown {
+	right: 20%;
+}
+
+#startGame {
+	top: 127px;
+	right: -81px;
+	width: 400px;
+}
+
+.gameBigButton {
+	position: absolute;
+	color: #fff;
+	text-shadow: 0px 0px 10px #FF6880;
+	font-size: 3rem;
+}
+
+#okButton {
+	top: 127px;
+	right: -81px;
+	position: absolute;
+	color: #fff;
+	text-shadow: 0px 0px 10px #FF6880;
+	font-size: 3rem;
+	width: 100px;
+}
+
+.rotate90 {
+	-webkit-transform: rotate(90deg);
+}
+
 .stopGame {
 	position: absolute;
-	-webkit-transform: rotate(90deg);
 	width: 100px;
 	right: -30px;
 	top: 290px;
+}
+
+.menuText {
+	text-align: center;
+	position: absolute;
+	top: 130px;
+	right: -50px;
+}
+
+.resultText {
+	text-align: left;
+	position: absolute;
+	top: 60px;
+	right: -10px;
 }
 
 .scoreDisplay {
 	position: absolute;
 	top: 40px;
 	right: 0px;
-	-webkit-transform: rotate(90deg);
 	font-size: 2rem;
+}
+
+.level1 {
+	z-index: 100;
+}
+
+.level2 {
+	z-index: 200;
+}
+
+.level3 {
+	z-index: 300;
+}
+
+.level4 {
+	z-index: 400;
+}
+
+.level5 {
+	z-index: 99999999999999999999999999;
 }
 
 
