updated postal address functionality

--- a/www/templates/signup-modal.html
+++ b/www/templates/signup-modal.html
@@ -78,10 +78,10 @@
 				</div>               
 				<ul class="list">
 				    <li class="item" ng-click="EnterAddress()">
-				      <i class="icon ion-briefcase rightIcon"></i>Work Physical Address
+				      <i class="icon ion-briefcase rightIcon"></i>{{address}}
 				    </li>                    
                     <li class="item" ng-click="EnterPostalAddress()">
-				      <i class="icon ion-email rightIcon"></i>Work Postal Address
+				      <i class="icon ion-email rightIcon"></i>{{postal}}
 				    </li>
 				</ul>
                 
