--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -60,13 +60,46 @@
 				<span class="err" ng-show="UpdateUserForm.ContactNumber.$error.required">Please provide your contact number.</span>
 			</div>
 
-		  <label class="item item-input item-select">
-		    <div class="input-label">
-		      Region
-		    </div>
-		    <select ng-options="region for region in Regions" ng-model="User.region" name="Region" required="">
-		    </select>
-		  </label>
+
+			<ul class="list">
+				    <li class="item" ng-click="EnterAddress()">
+				      <i class="icon ion-briefcase rightIcon"></i>{{address}}
+				    </li>                    
+                    <li class="item" ng-click="EnterPostalAddress()">
+				      <i class="icon ion-email rightIcon"></i>{{postal}}
+				    </li>
+				</ul>
+
+
+
+
+		  <p class="formTxt">Other Information</p>
+
+			<label class="item item-input item-select">
+				<div class="input-label">
+				  Relationship Type
+				</div>
+				<select ng-options="rel for rel in RelationshipTypes" ng-model="User.relationshipType" name="Relationship" required="" data-tab-disabled="true">
+					<option value=""></option>
+				</select>
+			</label>
+
+			<div ng-show="NewAccount.$submitted || NewAccount.Relationship.$touched">
+				<span class="err" ng-show="NewAccount.Relationship.$error.required">Please provide your relationship type.</span>
+			</div>
+
+			<label class="item item-input item-select">
+				<div class="input-label">
+				  Industry
+				</div>
+				<select ng-options="ind for ind in Industries" ng-model="User.industry" name="Industry" required="" data-tab-disabled="true">
+					<option value=""></option>
+				</select>
+			</label>
+
+			<div ng-show="NewAccount.$submitted || NewAccount.Industry.$touched">
+				<span class="err" ng-show="NewAccount.Industry.$error.required">Please provide your industry.</span>
+			</div>
 
 		  	<div ng-show="UpdateUserForm.$submitted || UpdateUserForm.Region.$touched">
 				<span class="err" ng-show="UpdateUserForm.Region.$error.required">Please provide your contact number.</span>
