--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,4 +1,4 @@
-<ion-view>
+<ion-view hide-back-button="true">
   <ion-content>
 
       <!-- <button ng-click="OpenNewAccount()" class="button button-block button-balanced">
