--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -18,43 +18,43 @@
     <ion-content class="SideMenu">
       <ion-list>
 
-        <ion-item nav-clear menu-close href="#/app/home">
+        <ion-item nav-clear href="#/app/home">
           Home
         </ion-item>
 
-        <ion-item nav-clear menu-close href="#/app/request/order">
+        <ion-item nav-clear menu-toggle href="#/app/request/order">
           Order Request
         </ion-item>
 
-        <ion-item nav-clear menu-close href="#/app/request/technical">
+        <ion-item nav-clear menu-toggle href="#/app/request/technical">
           Technical Support
         </ion-item>
 
-        <ion-item nav-clear menu-close href="#/app/request/design">
+        <ion-item nav-clear menu-toggle href="#/app/request/design">
           Design Request
         </ion-item>
 
-        <ion-item nav-clear menu-close href="#/app/request/account">
+        <ion-item nav-clear menu-toggle href="#/app/request/account">
           Account Enquiry
         </ion-item>
 
-        <ion-item nav-clear menu-close href="#/app/productinfo">
+        <ion-item nav-clear menu-toggle href="#/app/productinfo">
           Product Info
         </ion-item>
 
-        <ion-item nav-clear menu-close href="#/app/game">
+        <ion-item nav-clear menu-toggle href="#/app/game">
           bidim Game
         </ion-item>
 
-        <ion-item nav-clear menu-close href="#/app/media">
+        <ion-item nav-clear menu-toggle href="#/app/media">
           Media Links
         </ion-item>
 
-        <ion-item nav-clear menu-close href="#/app/findus">
+        <ion-item nav-clear menu-toggle href="#/app/findus">
           Find Us
         </ion-item>
 
-        <ion-item nav-clear menu-close ng-click="OpenWebsite()">
+        <ion-item nav-clear menu-toggle ng-click="LoadURL('http://www.kaytech.co.za')">
           Website
         </ion-item>
 
