--- a/www/css/style.css
+++ b/www/css/style.css
@@ -488,7 +488,9 @@ ion-content {
 
 #userName {
 	color: #fff;
-	text-shadow: 0px 0px 10px #FF6880;
+	text-shadow: 0px 0px 10px brown;
+	-webkit-text-stroke-width: 1px;
+  	-webkit-text-stroke-color: brown;
 	font-size: 2rem;
 	top: -10px;
 	width: 250px;
@@ -536,12 +538,14 @@ ion-content {
 	top: 127px;
 	right: -81px;
 	width: 400px;
+	-webkit-text-stroke-width: 1px;
+  	-webkit-text-stroke-color: brown;
 }
 
 .gameBigButton {
 	position: absolute;
 	color: #fff;
-	text-shadow: 0px 0px 10px #FF6880;
+	text-shadow: 0px 0px 5px brown;
 	font-size: 3rem;
 }
 
@@ -550,7 +554,9 @@ ion-content {
 	right: -81px;
 	position: absolute;
 	color: #fff;
-	text-shadow: 0px 0px 10px #FF6880;
+	text-shadow: 0px 0px 10px brown;
+	-webkit-text-stroke-width: 1px;
+  	-webkit-text-stroke-color: brown;
 	font-size: 3rem;
 	width: 100px;
 }
