--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -54,7 +54,7 @@
           Find Us
         </ion-item>
 
-        <ion-item nav-clear menu-toggle ng-click="LoadURL('http://www.kaytech.co.za')">
+        <ion-item nav-clear menu-toggle ng-click="LoadURL('http://www.kaytech.co.za','full-page')">
           Website
         </ion-item>
 
