added text wrapping in all dropdown list

--- a/www/templates/address-modal.html
+++ b/www/templates/address-modal.html
@@ -44,7 +44,7 @@
         </label>
 
         <label class="item item-input item-select">
-          <div class="input-label">
+          <div class="input-label item-text-wrap">
             Region
           </div>
           <select ng-options="region for region in Regions" ng-model="NewUser.region" required="" data-tab-disabled="true">
