--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -76,7 +76,7 @@
 		  <p class="formTxt">Other Information</p>
 
 			<label class="item item-input item-select">
-				<div class="input-label">
+				<div class="input-label item-text-wrap">
 				  Relationship Type
 				</div>
 				<select ng-options="rel for rel in RelationshipTypes" ng-model="User.relationshipType" name="Relationship" required="" data-tab-disabled="true">
@@ -89,7 +89,7 @@
 			</div>
 
 			<label class="item item-input item-select">
-				<div class="input-label">
+				<div class="input-label item-text-wrap">
 				  Industry
 				</div>
 				<select ng-options="ind for ind in Industries" ng-model="User.industry" name="Industry" required="" data-tab-disabled="true">
