--- a/www/templates/request.html
+++ b/www/templates/request.html
@@ -66,7 +66,7 @@
 			</div>
 
 		  <label class="item item-input item-select">
-		    <div class="input-label">
+		    <div class="input-label item-text-wrap">
 		      Region
 		    </div>
 		    <select ng-options="region for region in Regions" ng-model="Request.region" data-tab-disabled="true">
@@ -76,7 +76,7 @@
 
 		<p class="formTxt">Request Details</p>
 		  <label class="item item-input item-select">
-		    <div class="input-label">
+		    <div class="input-label item-text-wrap">
 		      Request Type
 		    </div>
 		    <select ng-model="Request.type" data-tab-disabled="true">
@@ -156,7 +156,7 @@
 			</div>
 
 		  <label class="item item-input item-select">
-		    <div class="input-label">
+		    <div class="input-label item-text-wrap">
 		      Enquiry Type
 		    </div>
 		    <select ng-options="option for option in Options" ng-model="Enquiry.type" name="EnquiryType" required="" data-tab-disabled="true">
