removed KayTech Branches link

--- a/www/templates/findus.html
+++ b/www/templates/findus.html
@@ -4,10 +4,7 @@
 
     <div class="findIcons pageButtons">
     	<a ng-click="LoadURL('http://kaytech.co.za/contact-us/branches-in-south-africa/')">
-    		Kaytech Branches
-    	</a>
-    	<a ng-click="LoadURL('http://kaytech.co.za/contact-us/branches-in-south-africa/')">
-    		SA Distributors
+    		SA Sales &amp; Distributors
     	</a>
     	<a ng-click="LoadURL('http://kaytech.co.za/contact-us/international-distributors/')">
     		International Distributors
