modal and layout fixes - password reset functionality

--- a/www/templates/resetPassword-modal.html
+++ b/www/templates/resetPassword-modal.html
@@ -4,11 +4,12 @@
       <button class="button button-clear" ng-click="CancelResetPassword()">Close</button>
     </div>
   </ion-header-bar>
-  <ion-content>
-
+  <ion-content>   
+       <div class="list list-inset">
        <button class="button button-block button-dark button-small" ng-click="CancelResetPassword()">
         Cancel
        </button>
+      </div>
 
       <!--      for searching user-->
       <div ng-hide="canReset">
@@ -30,19 +31,22 @@
       
       <!--      for validationg user question-->
       <div ng-show="canReset">
-        <form novalidate name="AnswerForm">            
-            <label>Question:</label>
-            <p>{{Reset.question}}</p>
-            <br/>
-            <input type="text" placeholder="Answer" ng-model="Reset.answer" required=true/>
+        <form novalidate name="AnswerForm"> 
+             <div class="list list-inset">
+            <label>Question</label>
+            <p>{{Reset.question}}</p>           
+           
+			  <label class="item item-input">
+			    <input type="text" placeholder="Answer" ng-model="Reset.answer" required=true/>
+			  </label>
+            
+            
+<!--            <input type="text" placeholder="Answer" ng-model="Reset.answer" required=true/>-->
              
               <button ng-click="ResetPassword()" class="button button-block button-balanced" >Submit</button>
+                </div>
           </div>
-        </form>
-      
+        </form>      
       </div>
-      
-    
-
-  </ion-content>
+    </ion-content>
 </ion-modal-view>
