--- a/www/templates/game.html
+++ b/www/templates/game.html
@@ -21,7 +21,8 @@
 			<div class="resultText rotate90">
 				<div class="congrats">Good Job {{User.firstName}}!</div>
 				<div class="productData">
-					<p>{{Product.name}}</p>
+					<h4>{{Product.name}}</p>
+					<p>{{Product.use}}</p>
 					<img src="{{Product.image}}">
 				</div>
 				<div id="okButton" class="gameBigButton level4" ng-click="Reset()">OK!</div>
