--- a/www/css/style.css
+++ b/www/css/style.css
@@ -500,7 +500,9 @@ ion-content {
 	width: 250px;
 	right: 140px;
 	position: absolute;
-	-webkit-transform: rotate(-20deg);
+	-ms-transform: rotate(-20deg); /* IE 9 */
+    -webkit-transform: rotate(-20deg); /* Chrome, Safari, Opera */
+    transform: rotate(-20deg);
 	z-index: 100000;
 }
 
@@ -566,7 +568,9 @@ ion-content {
 }
 
 .rotate90 {
-	-webkit-transform: rotate(90deg);
+	-ms-transform: rotate(90deg); /* IE 9 */
+    -webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
+    transform: rotate(90deg);
 }
 
 .stopGame {
