--- a/www/templates/game.html
+++ b/www/templates/game.html
@@ -12,7 +12,7 @@
 			<div class="menuText rotate90">
 				<div id="userName" ng-show="!Started">Hi, {{User.firstName}}!</div>
 				<h4>Aim of the game:</h4>
-				<p>Collect as many items as you can to see how much bidim you can create!</p>
+				<p>Recycle as many plastic bottles as you can to see how much <span class="bidimLogo">bidim</span> you can create!</p>
 				<div id="startGame" class="gameBigButton level4" ng-click="StartGame()" ng-show="!Started">Start Game</div>
 			</div>
 		</div>
