--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -29,7 +29,7 @@
     		<i class="ion-ios-information-outline"></i>
     		Product Info
     	</a>
-    	<a href="#/app/game">
+    	<a href="#/app/game" ng-hide="IsWindows">
     		<i class="ion-ios-game-controller-b"></i>
     		bidim Game
     	</a>
