--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -41,7 +41,7 @@
     		<i class="ion-ios-search-strong"></i>
     		Find Us
     	</a>
-    	<a ng-click="LoadURL('http://www.kaytech.co.za','full-page')">
+    	<a ng-click="LoadURL('http://www.kaytech.co.za','full-page', true)">
     		<i class="ion-android-globe"></i>
     		Website
     	</a>
