--- a/www/templates/media.html
+++ b/www/templates/media.html
@@ -3,27 +3,27 @@
     <h3>Media Links</h3>
 
     <div class="mediaLinks pageButtons">
-    	<a ng-click="LoadURL('https://www.youtube.com/channel/UCDhD45LuZDf1FmnU4kujmGA')">
+    	<a ng-click="LoadURL('https://www.youtube.com/channel/UCDhD45LuZDf1FmnU4kujmGA', 'full-page', true)">
     		<i class="ion-social-youtube youTube"></i>
             <span>Youtube</span>
     	</a>
-    	<a ng-click="LoadURL('https://www.linkedin.com/company/kaytech-engineered-fabrics')">
+    	<a ng-click="LoadURL('https://www.linkedin.com/company/kaytech-engineered-fabrics', 'full-page', true)">
     		<i class="ion-social-linkedin linkedIn"></i>
             <span>LinkedIn</span>
     	</a>
-    	<a ng-click="LoadURL('https://www.facebook.com/KaytechEngineeredFabrics')">
+    	<a ng-click="LoadURL('https://www.facebook.com/KaytechEngineeredFabrics', 'full-page', true)">
     		<i class="ion-social-facebook faceBook"></i>
             <span>Facebook</span>
     	</a>
-    	<a ng-click="LoadURL('https://twitter.com/kaytechsa')">
+    	<a ng-click="LoadURL('https://twitter.com/kaytechsa', 'full-page', true)">
     		<i class="ion-social-twitter twitter"></i>
             <span>Twitter</span>
     	</a>
-    	<a ng-click="LoadURL('https://www.pinterest.com/kaytechsa/')">
+    	<a ng-click="LoadURL('https://www.pinterest.com/kaytechsa/', 'full-page', true)">
     		<i class="ion-social-pinterest pinterest"></i>
             <span>Pinterest</span>
     	</a>
-    	<a ng-click="LoadURL('https://plus.google.com/112880968307489818868/videos')">
+    	<a ng-click="LoadURL('https://plus.google.com/112880968307489818868/videos', 'full-page', true)">
     		<i class="ion-social-googleplus googlePlus"></i>
             <span>Google +</span>
     	</a>
