--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -18,7 +18,7 @@
     <ion-content class="SideMenu">
       <ion-list>
 
-        <ion-item nav-clear href="#/app/home">
+        <ion-item nav-clear menu-toggle href="#/app/home">
           Home
         </ion-item>
 
@@ -54,7 +54,7 @@
           Find Us
         </ion-item>
 
-        <ion-item nav-clear menu-toggle ng-click="LoadURL('http://www.kaytech.co.za','full-page')">
+        <ion-item nav-clear menu-toggle ng-click="LoadURL('http://www.kaytech.co.za','full-page', true)">
           Website
         </ion-item>
 
