--- a/www/templates/settings-modal.html
+++ b/www/templates/settings-modal.html
@@ -28,9 +28,9 @@
 
     <h4>Game Performance</h4>
 
-    <div class="item range range-balanced">
+    <!-- <div class="item range range-balanced">
         <input type="range" name="volume" min="0" max="100" value="33" ng-model="SliderValue" ng-change="ChangeGameSpeed(SliderValue)">
-    </div>
+    </div> -->
 
   </ion-content>
 </ion-modal-view>
