--- a/www/templates/postal-modal.html
+++ b/www/templates/postal-modal.html
@@ -4,7 +4,7 @@
   
       
     <form novalidate name="AddressForm">
-        <p class="formTxt">Please enter work postal address</p>        
+        <p class="formTxt">Please e​nter your company's postal address</p>        
 
     <ul class="list">
 	  <li class="item item-checkbox item-text-wrap">
@@ -16,22 +16,22 @@
 	</ul>        
        <div class="list list-inset">
         <label class="item item-input">
-          <textarea class="caps" placeholder="Address Line 1" name="Address1" ng-model="NewUser.postalAddress[0]" required=""></textarea>
+          <input type="text" class="caps" placeholder="Address Line 1" name="Address1" ng-model="NewUser.postalAddress[0]" required="">
         </label>
         <div ng-show="AddressForm.Address1.$touched">
           <span class="err" ng-show="AddressForm.Address1.$error.required">Please provide your address.</span>
         </div>
 
         <label class="item item-input">
-          <textarea class="caps" placeholder="Address Line 2" name="Address1" ng-model="NewUser.postalAddress[1]"></textarea>
+          <input type="text" class="caps" placeholder="Address Line 2" name="Address1" ng-model="NewUser.postalAddress[1]">
         </label>
         
          <label class="item item-input">
-          <textarea class="caps" placeholder="Address Line 3" name="Address1" ng-model="NewUser.postalAddress[2]"></textarea>
+          <input type="text" class="caps" placeholder="Address Line 3" name="Address1" ng-model="NewUser.postalAddress[2]">
         </label>
         
         <label class="item item-input">
-          <textarea class="caps" placeholder="City" name="Address1" ng-model="NewUser.postalAddress[3]" />
+          <input type="text" class="caps" placeholder="City" name="Address1" ng-model="NewUser.postalAddress[3]" />
         </label>        
         </div>
     </form>
