--- a/www/css/style.css
+++ b/www/css/style.css
@@ -218,6 +218,20 @@ ion-content {
 	width: 34%;
 }
 
+.customSmallSelect {
+	max-width: 100% !important;
+	left: 0;
+	padding: 0px 0px 0px 0px !important;
+}
+
+.customLargeSelect {
+	max-width: 0 !important;
+}
+
+.customLargeLabel {
+	width: 100% !important;
+}
+
 .productType {
 	width: 95%;
 	margin: auto;
@@ -473,10 +487,10 @@ ion-content {
 
 #box {
     background-color: red;
-    height: 50px;
+    height: 60px;
     position: absolute;
     top: 10px;
-    width: 60px;
+    width: 70px;
     background: url('../img/game/GameGuy.png');
     background-size: cover;
 }
