--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -4,7 +4,7 @@
       <ion-nav-back-button>
       </ion-nav-back-button>
 
-      <ion-nav-buttons side="left">
+      <ion-nav-buttons side="left" class="_jsNavIcon">
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
       </ion-nav-buttons>
