Added profile items.

--- a/www/templates/address-modal.html
+++ b/www/templates/address-modal.html
@@ -40,7 +40,11 @@
         </label>
         
         <label class="item item-input">
-          <input type="text" class="caps" placeholder="City" name="Address1" ng-model="NewUser.address[3]" rows="2"/>
+          <input type="text" class="caps" placeholder="City" name="Address1" ng-model="NewUser.address[3]"/>
+        </label>
+
+        <label class="item item-input">
+          <input type="text" class="caps" placeholder="Zip Code" name="ZipCode" ng-model="NewUser.address[4]"/>
         </label>
 
         <label class="item item-input item-select">
