--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -33,14 +33,14 @@
 				<span class="err" ng-show="UpdateUserForm.EmailAddress.$error.required">Please provide your email.</span>
 			</div>
 
-		  <label class="item item-input item-stacked-label">
+		  <!-- <label class="item item-input item-stacked-label">
 		    <span class="input-label">Address</span>
 		    <input type="text" ng-model="User.address" name="Address" required="">
 		  </label>
 
 		  	<div ng-show="UpdateUserForm.$submitted || UpdateUserForm.Address.$touched">
 				<span class="err" ng-show="UpdateUserForm.Address.$error.required">Please provide your address.</span>
-			</div>
+			</div> -->
 
 		  <label class="item item-input item-stacked-label">
 		    <span class="input-label">Company</span>
