--- a/www/templates/request.html
+++ b/www/templates/request.html
@@ -113,7 +113,7 @@
 		  <i class="icon ion-camera cam"></i>
 		</button>
 
-		<button ng-click="SendEnquiry(Request)" ng-show="OrderQuoteRequest.$valid" type="submit" class="button nextToCam button-balanced" ng-class="{blockBtn : Photo.src}">
+		<button ng-click="SendEnquiry(Request)" ng-show="OrderQuoteRequest.$valid" type="submit" class="button nextToCam button-balanced">
 		  Submit
 		</button>
 
@@ -195,7 +195,7 @@
 
 		<input type="file" fileread="Photo.src" id="photo" accept=".jpg,.jpeg" ng-show="PhotoInput()" style="display: none;">
 
-		<button ng-click="SendEnquiry(Enquiry)" ng-show="StandardRequest.$valid" type="submit" class="button nextToCam button-balanced" ng-class="{blockBtn : Photo.src}">
+		<button ng-click="SendEnquiry(Enquiry)" ng-show="StandardRequest.$valid" type="submit" class="button nextToCam button-balanced">
 		  Submit
 		</button>
 
