--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -12,7 +12,7 @@
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
 
-  <ion-side-menu side="left" enable-menu-with-back-views="false">
+  <ion-side-menu side="left" enable-menu-with-back-views="false" expose-aside-when="large">
     <ion-header-bar class="bar-stable">
     </ion-header-bar>
     <ion-content class="SideMenu">
