updated links in findus page

--- a/www/templates/findus.html
+++ b/www/templates/findus.html
@@ -2,14 +2,16 @@
   <ion-content>
     <h3>Find Us</h3>
 
-    <div class="findIcons pageButtons">
-    	<a ng-click="LoadURL('http://kaytech.co.za/contact-us/branches-in-south-africa/')">
-    		SA Sales &amp; Distributors
+    <div class="findIcons pageButtons">        
+        <a ng-click="LoadURL('http://kaytech.co.za/contact-us/sales-offices/')">
+    		Kaytech Branches
     	</a>
-    	<a ng-click="LoadURL('http://kaytech.co.za/contact-us/international-distributors/')">
+    	<a ng-click="LoadURL('http://kaytech.co.za/contact-us/local-distributors/')">
+    		SA Distributors
+    	</a>
+    	<a ng-click="LoadURL('http://kaytech.co.za/contact-us/international-distributors-2/')">
     		International Distributors
     	</a>
     </div>
-
   </ion-content>
 </ion-view>
