--- a/www/templates/address-modal.html
+++ b/www/templates/address-modal.html
@@ -48,7 +48,7 @@
         </label>
 
         <label class="item item-input item-select">
-          <div class="input-label item-text-wrap">
+          <div class="input-label item-text-wrap smallLabel">
             {{NewUser.region}}
           </div>
           <select ng-options="region for region in Regions" ng-model="NewUser.region" required="" data-tab-disabled="true" ng-class="{'customSmallSelect' : NewUser.region != 'Region'}">
